SSCSCI-2478 Apply Judges decision to Confidentiality tab