@@ -11,6 +11,7 @@ import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -123,8 +124,7 @@ public class ValidSendToInterlocAboutToSubmitHandler implements PreSubmitCallbac
     private boolean isSelectionMissing(DynamicList dynamicList) {
         return dynamicList == null
                 || dynamicList.getValue() == null
-                || dynamicList.getValue().getCode() == null
-                || dynamicList.getValue().getCode().isBlank();
+                || StringUtils.isBlank(dynamicList.getValue().getCode());
     }
 
 }
